# cmake-project-templates

./: README.md
library-project/: CMakeLists.txt  COPYING.TXT  README.md  projectInfo.txt
library-project/cmake/: README.md  init-project.cmake  projectHelpers.cmake
library-project/cmake/_template/: README.md  demoTemplate.rc.in  libTemplate.rc.in
library-project/demos/: README.md
library-project/docs/: CMakeLists.txt  README.md  build.md  mainpage.md
library-project/packaging/: CMakeLists.txt  README.md  cpackOptions.cmake.in  preBuildCPack.cmake.in
library-project/src/: CMakeLists.txt  README.md
library-project/src/core/: CMakeLists.txt  Info.h.in  README.md
library-project/translations/: CMakeLists.txt  README.md
library-project/unittests/: CMakeLists.txt  README.md
